# alabuga-oneplusplus-backend

./: .env.example  .gitignore  DEPLOYMENT.md  FEATURES.md  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.quickstart.yml  docker-compose.yml  nginx.quickstart.conf  start.sh
app/: .env.example  manage.py  models  pyproject.toml  readme.md
app/alabuga/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/alabuga/settings/: __init__.py  caches.py  celery.py  cors.py  debug_tools.py  django.py  drf.py  email.py  keycloak.py  llm.py  logging.py  sentry.py
app/alabuga_file/: admin.py  apps.py
app/alabuga_file/api/: routers.py
app/alabuga_file/models/: __init__.py  cicada_file.py
app/common/: constants.py  fixtures.json  models.py  permissions.py  selectors.py  serializers.py  services.py  utils.py  utils_for_ai.py  utils_for_fixtures.py  views.py
app/communication/: admin.py  apps.py
app/communication/api/: urls.py
app/communication/migrations/: 0001_initial.py  0002_activitylog.py  0002_initial.py  0003_remove_comment_user_remove_post_user_and_more.py  0003_remove_post_parent.py  0004_activitylog_is_read.py
app/communication/models/: __init__.py  activity_log.py  comment.py  post.py  topic.py
app/communication/permissions/: event.py  topic.py
app/config/: .env.example
app/docker/app/: Dockerfile  entrypoint.sh  gunicorn.conf
app/docker/nginx/: Dockerfile  nginx.conf
app/experience/: admin.py  apps.py
app/experience/models/: competency.py  rank.py  rank_competency_requirement.py  user_artifact.py  user_competency.py
app/experience/serializers/: __init__.py  artifact.py  competency.py  rank.py
app/fixtures/: fixtures.json  new_fixtures.json
app/game_mechanics/: admin.py  apps.py  models.py  urls.py
app/game_mechanics/api/: urls.py
app/game_mechanics/migrations/: 0001_initial.py  0002_initial.py  0003_competency_level_alter_competency_name.py  0003_remove_requiredrankcompetency_required_experience.py  0004_alter_competency_description_and_more.py
app/game_mechanics/models/: __init__.py  artifact.py  competency.py  rank.py  rank_competency_requirement.py  required_rank_competency.py
app/game_mechanics/serializers/: __init__.py  onboarding.py
app/game_world/: admin.py  apps.py
app/game_world/api/: urls.py
app/game_world/fixtures/: fixtures.json
app/game_world/migrations/: 0001_initial.py  0002_initial.py  0003_alter_activitycategory_color_and_more.py  0003_alter_activitycategory_options_artifact_color_and_more.py  0004_event_qr_code_mission_qr_code_alter_mission_icon.py  0004_mission_color_alter_event_is_active_and_more.py  0005_activitycategory_repeatability_and_more.py  0005_gameworld_data_for_graph_delete_gameworldsettings.py  0006_alter_event_options_alter_missionbranch_mentor.py  0006_remove_mission_required_missions_alter_event_rank_and_more.py  0007_alter_activitycategory_description_and_more.py  0008_alter_eventcompetency_options_alter_event_artifacts_and_more.py  0009_mission_category_mission_mentor_and_more.py
app/gamification/: admin.py  apps.py  models.py  urls.py
app/missions/: admin.py  apps.py  models.py  urls.py
app/multimedia/: admin.py  apps.py
app/service_interaction/: admin.py  apps.py
app/shop/: admin.py  apps.py  models.py  tasks.py  urls.py
app/shop/api/: urls.py
app/user/: admin.py  apps.py  tasks.py
(+275 files in other folders)
